# seaside

./: Cargo.toml  README.md  Seaside.toml  progress.yaml  seaside_bin.py  update.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  refactoring-discussion.md
crates/assembler/: Cargo.toml
crates/assembler/src/: directives.rs  lib.rs  main.rs  segment.rs
crates/assembler/src/error/: assemble.rs  lex.rs  parse.rs
crates/assembler/src/instruction/: assemble.rs  macros.rs  mod.rs  process.rs
crates/assembler/src/parser/: expr.rs  mod.rs  operand.rs
crates/bitflags-serde/: Cargo.toml
crates/bitflags-serde/src/: de.rs  ser.rs
crates/config/: Cargo.toml
crates/config/src/: primitive_defaults.rs
crates/config/src/features/: assembler.rs  mod.rs
crates/config/src/features/services/: service.rs
crates/config/src/memory_map/: mod.rs
crates/config/src/register_defaults/: mod.rs  register_set.rs
crates/constants/src/: cc.rs  instruction_format.rs
crates/disassembler/: Cargo.toml
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/error/src/rich/: label.rs  mod.rs
crates/int-utils/: Cargo.toml
crates/int-utils/src/: all_zeroes.rs  sign_extend.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: exception.rs  file_handle.rs  lib.rs  rng.rs
crates/seaside-assembler/: Cargo.toml
crates/seaside-assembler/src/: assemble.rs  directives.rs  error.rs  lib.rs  macros.rs  segment.rs  string_builder.rs  string_literal.rs  token.rs
crates/seaside-assembler/src/error/: mod.rs
crates/seaside-assembler/src/instruction/: operator.rs
crates/seaside-assembler/src/operation/: basic_operator.rs  macros.rs  mod.rs  operand.rs
crates/seaside-assembler/src/parser/: error.rs  expected.rs  expr.rs  macros.rs  mod.rs  node.rs  value.rs
crates/seaside-bitflags-addons/: Cargo.toml
crates/seaside-bitflags-addons/src/: deserialize.rs  lib.rs  serialize.rs  visitor.rs
crates/seaside-bitflags-serde/: Cargo.toml
crates/seaside-bitflags-serde/src/: de.rs
crates/seaside-config/: Cargo.toml
crates/seaside-config-editor/: Cargo.toml
crates/seaside-config-editor/src/: editable.rs  editable_config.rs  lib.rs  macros.rs  seaside_version.rs  tutorial.rs  versions.rs
crates/seaside-config/src/: binary.rs  lib.rs  presets.rs  properties.rs  validate.rs  version.rs
crates/seaside-config/src/binary/: mod.rs  traits.rs
crates/seaside-config/src/features/: assembler.rs  mod.rs  syscalls.rs
crates/seaside-config/src/features/services/: mars.rs  mod.rs  spim.rs
crates/seaside-config/src/memory_map/: address_range.rs  mod.rs  runtime_data.rs  segment.rs  segments.rs
crates/seaside-config/src/properties/: macros.rs  mod.rs
crates/seaside-config/src/register_defaults/: coprocessor_0.rs  floating_point.rs  general_purpose.rs  mod.rs  register_set.rs  registers.rs
crates/seaside-constants/: Cargo.toml
crates/seaside-constants/src/: cc.rs  lib.rs  number_fmt.rs  opcodes.rs  register.rs  service_codes.rs
crates/seaside-constants/src/fn_codes/: coprocessor_0.rs  coprocessor_1.rs  mod.rs  register_immediate.rs  special.rs  special_2.rs
crates/seaside-constants/src/register/: coprocessor_0.rs  cpu.rs  fpu.rs  indexed.rs  mod.rs  parse_error.rs
crates/seaside-disassembler/: Cargo.toml
crates/seaside-disassembler/src/: fields.rs  lib.rs
crates/seaside-disassembler/src/destructure/: component.rs  coprocessor_0.rs  coprocessor_1.rs  destructured_instruction.rs  immediate.rs  jump.rs  mod.rs  operation.rs  special.rs  special_2.rs
crates/seaside-error/: Cargo.toml
crates/seaside-error/src/: lib.rs
crates/seaside-int-utils/: Cargo.toml
crates/seaside-int-utils/src/: byte_stream.rs  endian.rs  lib.rs
crates/seaside-interpreter/: Cargo.toml
crates/seaside-interpreter/src/: exception.rs  file_handle.rs  lib.rs  register_file.rs  syscall_failure.rs  syscalls.rs
crates/seaside-interpreter/src/execute/: coprocessor_0.rs  coprocessor_1.rs  immediate.rs  jump.rs  mod.rs  special.rs  special_2.rs  syscall.rs
crates/seaside-interpreter/src/memory/: data_memory.rs  init.rs  instruction_memory.rs  mod.rs
crates/seaside-interpreter/src/memory/regions/: data.rs  region.rs  text.rs
crates/seaside-service-group/: Cargo.toml
crates/seaside-service-group/src/: lib.rs  nested.rs
crates/seaside-type-aliases/: Cargo.toml
crates/service-group/src/: nested.rs  unnested.rs
crates/type-aliases/src/: lib.rs
res/: NewSeaside.toml  Seaside.toml  property_ids.txt  schema.json
res/example_programs/heap_test/: data  main.asm  text
res/example_programs/hello/: text
res/example_programs/memory_game/: data  main.asm
res/example_programs/pow/: data  main.asm  text
res/example_programs/read_char_test/: data  text
res/file_io_test/: data  text
res/hello/: text
res/memory_game/: data  main.asm  text
res/rng_test/: data  text
res/two_sum/: data  text
src/: byte_stream.rs  cmd_args.rs  lib.rs  main.rs  sign_extend.rs
src/assembler/: assemble.rs  assembly_error.rs  directives.rs  error.rs  macros.rs  mod.rs  segment.rs  token.rs
src/assembler/operation/: basic_operator.rs  macros.rs  mod.rs
src/assembler/parser/: error.rs  macros.rs  mod.rs  node.rs  parse_error.rs
src/config/: bitflags_addons.rs  endian.rs  memory_map.rs  mod.rs  presets.rs  primitive_defaults.rs  red_flag_behavior.rs  validate.rs  version.rs
src/config/features/: assembler.rs  mod.rs  syscalls.rs
src/config/memory_map/: address.rs  address_range.rs  mod.rs  runtime_data.rs  segment.rs  traits.rs
src/config/register_defaults/: coprocessor_0.rs  general_purpose.rs  mod.rs  register_set.rs  registers.rs
src/config/registers/: coprocessor_0.rs  floating_point.rs  general_purpose.rs  (+3 more)
src/constants/: instruction_format.rs  mod.rs  number_fmt.rs  opcodes.rs
src/disassembler/: fields.rs  mod.rs
src/engine/: assembler.rs  config.rs  disassembler.rs  error.rs  init.rs  interpreter.rs  mod.rs
src/interpreter/: exception.rs  execute.rs  instruction.rs  mod.rs  register_file.rs  syscall_failure.rs  syscalls.rs
src/type_aliases/: address.rs  mod.rs
(+78 files in other folders)
