[package]
name = "seaside"
version = "1.2.0"
authors = ["RosieTheGhostie"]
edition = "2021"

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = true
incremental = true

[dependencies]
anyhow = "1.0"
directories = "5.0"
seaside-assembler = { version = "*", path = "crates/seaside-assembler" }
seaside-bitflags-addons = { version = "*", path = "crates/seaside-bitflags-addons" }
seaside-config = { version = "*", path = "crates/seaside-config" }
seaside-constants = { version = "*", path = "crates/seaside-constants" }
seaside-disassembler = { version = "*", features = [
	"full",
], path = "crates/seaside-disassembler" }
seaside-error = { version = "*", path = "crates/seaside-error" }
seaside-int-utils = { version = "*", path = "crates/seaside-int-utils" }
seaside-interpreter = { version = "*", path = "crates/seaside-interpreter" }
seaside-type-aliases = { version = "*", path = "crates/seaside-type-aliases" }
toml = "0.8"

[dependencies.clap]
version = "4.5"
features = ["cargo", "derive"]

[dependencies.minimal-logging]
version = "0.5"
features = ["full"]
git = "https://github.com/RosieTheGhostie/minimal-logging.git"
