[package]
name = "seaside"
version = "1.2.0"
authors = ["RosieTheGhostie <rosetheghost.dev@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0"
directories = "6.0"
seaside-assembler = { version = "*", path = "crates/seaside-assembler" }
seaside-config = { version = "*", path = "crates/seaside-config" }
seaside-constants = { version = "*", path = "crates/seaside-constants" }
seaside-disassembler = { version = "*", features = [
	"full",
], path = "crates/seaside-disassembler" }
seaside-error = { version = "*", path = "crates/seaside-error" }
seaside-int-utils = { version = "*", path = "crates/seaside-int-utils" }
seaside-interpreter = { version = "*", path = "crates/seaside-interpreter" }
seaside-type-aliases = { version = "*", path = "crates/seaside-type-aliases" }
serde = "1.0.219"
toml = "0.9.2"

[dependencies.clap]
version = "4.5.41"
features = ["cargo", "derive"]

[dependencies.minimal-logging]
version = "0.5"
features = ["full"]
git = "https://github.com/RosieTheGhostie/minimal-logging.git"
