[package]
name = "seaside"
version = "1.3.0"
authors = ["RosieTheGhostie <rosetheghost.dev@gmail.com>"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/RosieTheGhostie/seaside"
license = "MIT"

[dependencies]
anyhow = "1.0"
directories = "6.0"
seaside-assembler = { version = "*", path = "crates/assembler" }
seaside-config = { version = "*", path = "crates/config" }
seaside-constants = { version = "*", path = "crates/constants" }
seaside-disassembler = { version = "*", features = [
	"full",
], path = "crates/disassembler" }
seaside-error = { version = "*", path = "crates/error" }
seaside-int-utils = { version = "*", path = "crates/int-utils" }
seaside-interpreter = { version = "*", path = "crates/interpreter" }
seaside-type-aliases = { version = "*", path = "crates/type-aliases" }
serde = "1.0.219"
toml = "0.9.2"

[dependencies.clap]
version = "4.5.41"
features = ["cargo", "derive"]

[dependencies.minimal-logging]
version = "0.5"
features = ["full"]
git = "https://github.com/RosieTheGhostie/minimal-logging.git"
