[package]
name = "seaside-error"
description = "Error type for seaside"
version = "0.2.0"
authors = ["RosieTheGhostie <rosetheghost.dev@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
ariadne = { version = "0.5.1", optional = true }
thiserror = "2.0.12"

[features]
default = []
full = ["rich"]

rich = ["ariadne"]
