[package]
name = "seaside-int-utils"
description = "A small set of integer utilities for seaside"
version = "0.4.0"
authors = ["RosieTheGhostie <rosetheghost.dev@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]
optional = true

[features]
default = []
full = ["all_zeroes", "byte_stream", "endian", "sign_extend"]

all_zeroes = []
byte_stream = ["endian"]
endian = []
sign_extend = []
