[package]
name = "seaside-config"
description = "Configuration support for seaside"
version = "1.2.0"                                 # must match the version of seaside
authors = ["RosieTheGhostie"]
edition = "2021"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = "4.5"
num-traits = "0.2"
seaside-error = { version = "*", path = "../seaside-error" }
seaside-int-utils = { version = "*", path = "../seaside-int-utils" }
seaside-type-aliases = { version = "*", path = "../seaside-type-aliases" }
semver = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]
