[package]
name = "seaside-constants"
description = "Various constant and enum definitions for use in seaside"
version = "0.1.0"
authors = ["RosieTheGhostie <rosetheghost.dev@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
num-derive = "0.4"
num-traits = "0.2"
