[package]
name = "seaside-constants"
description = "Various constant and enum definitions for use in seaside"
version = "0.1.0"
authors = ["RosieTheGhostie <rosetheghost.dev@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
num-derive = "0.4"
num-traits = "0.2"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"

[dependencies.take-exact]
version = "0.1.0"
git = "https://github.com/RosieTheGhostie/take-exact"
