[package]
name = "seaside-disassembler"
description = "The MIPS32 disassembler for seaside"
version = "0.1.0"
authors = ["RosieTheGhostie"]
edition = "2024"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
num-traits = "0.2"
seaside-constants = { version = "*", path = "../seaside-constants" }
seaside-int-utils = { version = "*", features = [
	"sign_extend",
], path = "../seaside-int-utils" }
seaside-type-aliases = { version = "*", path = "../seaside-type-aliases" }

[dependencies.attribute-pseudoblock]
version = "0.1"
git = "https://github.com/RosieTheGhostie/attribute-pseudoblock.git"

[features]
default = ["fields", "disassembler"]
full = ["fields", "disassembler"]

fields = []
disassembler = ["fields"]
